fix: Remove classes on field input to hide overflow and wrap texts

--- a/app/assets/tailwind/maybe-design-system.css
+++ b/app/assets/tailwind/maybe-design-system.css
@@ -356,7 +356,6 @@
     @apply focus:opacity-100 focus:outline-hidden focus:ring-0;
     @apply placeholder-shown:opacity-50;
     @apply disabled:text-subdued;
-    @apply text-ellipsis overflow-hidden whitespace-nowrap;
     @apply transition-opacity duration-300;
     @apply placeholder:text-subdued;
 
